--- a/examples/circuit/src/App.css
+++ b/examples/circuit/src/App.css
@@ -2,6 +2,7 @@
   height: 600px;
   max-height: 90vh;
   width: 800px;
+  background-color: white;
 }
 .visiojs_svg:focus {
   outline: none; /* dark gray */
@@ -25,4 +26,8 @@
   color: #000000;
   text-anchor: middle;
   dominant-baseline: text-after-edge;
+}
+
+body {
+  background-color: azure;
 }
