--- a/package/src/visiojs.css
+++ b/package/src/visiojs.css
@@ -1,1 +1,59 @@
-.visiojs_selected_wire{stroke:#a723eb!important}.visiojs_bad_wire{stroke:#a7196a!important}.visiojs_good_wire{stroke:#19a75e!important}.visiojs_selected_connector{fill:#a723eb}.visiojs_wire{cursor:pointer;fill:none;stroke-linecap:round;stroke-linejoin:round;stroke:#000}.visiojs_hover_rect{stroke:#00f;stroke-dasharray:5,5;fill:transparent}.visiojs_elbow{stroke:#a0a0a0;stroke-width:.5;cursor:move}.visiojs_connector{stroke:#1b1b1b}.visiojs_grid_line{stroke:#f0f0f0;stroke-width:1}#visiojs_top{display:block}#visiojs_toggle_button{font-size:13px;border:2px solid #333;background:#eee;cursor:pointer;border-radius:4px;transition:background .2s,transform .1s}.visiojs_toggle_button_active{box-shadow:inset 0 0 5px #313131}.visiojs_svg{background-color:#fff}.visiojs_svg:focus{outline:none}
+.visiojs_selected_wire {
+  stroke: #a723eb !important;
+}
+.visiojs_bad_wire {
+  stroke: #a7196a !important;
+}
+.visiojs_good_wire {
+  stroke: #19a75e !important;
+}
+.visiojs_selected_connector {
+  fill: #a723eb;
+}
+.visiojs_wire {
+  cursor: pointer;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke: #000;
+}
+.visiojs_hover_rect {
+  stroke: #00f;
+  stroke-dasharray: 5, 5;
+  fill: transparent;
+}
+.visiojs_elbow {
+  stroke: #a0a0a0;
+  stroke-width: 0.5;
+  cursor: move;
+}
+.visiojs_connector {
+  stroke: #1b1b1b;
+}
+.visiojs_label {
+  user-select: none;
+}
+.visiojs_grid_line {
+  stroke: #f0f0f0;
+  stroke-width: 1;
+}
+#visiojs_top {
+  display: block;
+}
+#visiojs_toggle_button {
+  font-size: 13px;
+  border: 2px solid #333;
+  background: #eee;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background 0.2s, transform 0.1s;
+}
+.visiojs_toggle_button_active {
+  box-shadow: inset 0 0 5px #313131;
+}
+.visiojs_svg {
+  background-color: #fff;
+}
+.visiojs_svg:focus {
+  outline: none;
+}
