--- a/package/src/visiojs.css
+++ b/package/src/visiojs.css
@@ -46,7 +46,9 @@
   background: #eee;
   cursor: pointer;
   border-radius: 4px;
-  transition: background 0.2s, transform 0.1s;
+  transition:
+    background 0.2s,
+    transform 0.1s;
 }
 .visiojs_toggle_button_active {
   box-shadow: inset 0 0 5px #313131;
