Add type definition to elimnate warning. Allow click wire under shape. Add border of viewbox svg

--- a/package/src/visiojs.css
+++ b/package/src/visiojs.css
@@ -22,6 +22,13 @@
   stroke-dasharray: 5, 5;
   fill: transparent;
 }
+/* .visiojs_shape {
+  fill: transparent;
+}
+.visiojs_selected_outline {
+  outline: 1px dashed #00f;
+  outline-offset: 2px;
+} */
 .visiojs_elbow {
   stroke: #a0a0a0;
   stroke-width: 0.5;
